# sdl_engine

./: '  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  run.sh  start.bat
assets/maps/: default.map  saved.map  test.map
lib/SDL2_gpu.framework/Versions/A/: SDL2_gpu
lib/osx/lua-5.4.0/src/: lua  luac
lib/osx/lua_5.3/: liblua.5.3.5.dylib
lib/win/: SDL2_gpu.exp  SDL2_gpu.lib  SDL2_gpu_s.lib
osx_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  data.json  start
scripts/: assets.lua  entity.lua  game.lua  player_controller.lua
src/: AssetManager.cpp  AssetManager.h  Constants.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Helper.h  Main.cpp  Main2.cpp  MapMaker.cpp  MapMaker.h  UI_Canvas.cpp  UI_Canvas.h  Util.h  a.out
src/a.out.dSYM/Contents/Resources/DWARF/: a.out
tilemapeditor/: editor.py  run_editor  saved.map
win_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Beaver.sln  CMakeCache.txt  INC.vcxproj  INC.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  start.vcxproj  start.vcxproj.filters
win_build/Debug/: INC.lib  start.ilk
win_build/INC.dir/Debug/: INC.vcxproj.FileListAbsolute.txt
win_build/INC.dir/Debug/INC.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
win_build/INC.dir/Release/INC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
win_build/Release/: INC.lib
win_build/start.dir/Debug/start.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  start.lastbuildstate
win_build/start.dir/Release/start.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  start.lastbuildstate
win_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog
win_build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
